Features/7617 matrix rows enableif (#7636)
* Implement react rows enable #7617

* Implement rows read-only for all platforms #7617

* Refactor MatrixRow class by adding css property #7617

* Fix angular reactivity #7617

* Fix Angular reactivity #7617

* Fix issues after merging

* Rename row.css into row.rowTextClasses #7617

* Update css to apply opacity for disable row #7617

* Support row.isReadOnly in set row.value #7617

--- a/packages/survey-angular-ui/src/questions/matrixcell.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixcell.component.html
@@ -5,7 +5,7 @@
     [name]="row.fullName"
     [value]="column.value"
     [checked]="row.value === column.value"
-    [disabled]="question.isInputReadOnly"
+    [disabled]="row.isReadOnly"
     [attr.id]="question.inputId + '_' + row.name + '_' + columnIndex"
     (change)="onChange()"
     [attr.aria-required]="question.a11y_input_ariaRequired"
