--- a/packages/survey-angular-ui/src/components/paneldynamic-actions/paneldynamic-add-btn.component.html
+++ b/packages/survey-angular-ui/src/components/paneldynamic-actions/paneldynamic-add-btn.component.html
@@ -1,3 +1,3 @@
 <button type="button" *ngIf="question.canAddPanel" [class]="question.getAddButtonCss()" (click)="addPanelClick()">
-<span [class]="question.cssClasses.buttonAddText">{{question.panelAddText}}</span>
+<span [class]="question.cssClasses.buttonAddText"><sv-ng-string [model]="question.locPanelAddText"></sv-ng-string></span>
 </button>
