--- a/packages/survey-angular-ui/src/components/paneldynamic-actions/paneldynamic-remove-btn.component.html
+++ b/packages/survey-angular-ui/src/components/paneldynamic-actions/paneldynamic-remove-btn.component.html
@@ -1,4 +1,4 @@
 <button type="button" (click)="question.removePanelUI(panel)" [class]="question.getPanelRemoveButtonCss()"> 
-  <span [class]="question.cssClasses.buttonRemoveText">{{question.panelRemoveText}}</span>
+  <span [class]="question.cssClasses.buttonRemoveText"><sv-ng-string [model]="question.locPanelRemoveText"></sv-ng-string></span>
   <span [class]="question.cssClasses.iconRemove"></span>
 </button>
