--- a/packages/survey-angular-ui/src/popup.survey.component.html
+++ b/packages/survey-angular-ui/src/popup.survey.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!!popup && popup.isShowing" [class]="popup.cssRoot" [style.width]="popup.renderedWidth" [style.maxWidth]="popup.renderedWidth">
+<div *ngIf="!!popup && popup.isShowing" [class]="popup.cssRoot" [style.width]="popup.renderedWidth" [style.maxWidth]="popup.renderedWidth" (scroll)="popup.onScroll()">
   <div [class]="popup.cssRootContent">
     <div [class]="getHeaderCss()">
       <div *ngIf="popup.isCollapsed && !!popup.locTitle" [class]="popup.cssHeaderTitleCollapsed">
@@ -24,7 +24,7 @@
         </div>
       </div>
   </div>
-  <div *ngIf="popup.isExpanded" [class]="popup.cssBody" (scroll)="popup.onScroll()">
+  <div *ngIf="popup.isExpanded" [class]="popup.cssBody">
     <survey [model]="popup.survey"></survey>
   </div>
   </div>
