--- a/src/knockout/templates/window.html
+++ b/src/knockout/templates/window.html
@@ -1,4 +1,4 @@
-﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}">
+﻿<div data-bind="css: cssRoot, style:{width: renderedWidth, maxWidth: renderedWidth}, event: { scroll: $data.onScroll }">
     <div data-bind="css: cssRootContent">
         <div data-bind="css: cssHeaderRoot, {cssRootCollapsedMod: isCollapsed}">
 
@@ -23,7 +23,7 @@
                 <!-- /ko -->
             </div>
         </div>
-        <div data-bind="visible:isExpanded, css: cssBody, event: { scroll: $data.onScroll }">
+        <div data-bind="visible:isExpanded, css: cssBody">
             <survey params="survey: survey"></survey>
         </div>
     </div>
