panelAddText/RemoveText properties are not reactive fix #7658 (#7665)
* panelAddText/RemoveText/PrevText/NextText properties are not reactive fix #7658

* Add functional tests #7658

* Fix markup tests #7658

* FIx functional test #7658

* Fix knockout template #7658

--- a/src/knockout/components/paneldynamic-actions/paneldynamic-remove-btn.html
+++ b/src/knockout/components/paneldynamic-actions/paneldynamic-remove-btn.html
@@ -1,4 +1,4 @@
 <button type="button" data-bind="click: function() { question.koRemovePanelClick(panel); }, css: question.getPanelRemoveButtonCss()">
-  <span data-bind="css: question.cssClasses.buttonRemoveText, text: question.panelRemoveText"></span>
+  <span data-bind="css: question.cssClasses.buttonRemoveText"><!-- ko template: { name: 'survey-string', data: question.locPanelRemoveText } --><!-- /ko --></span>
   <span data-bind="css: question.cssClasses.iconRemove"></span>
 </button>
