--- a/src/knockout/components/paneldynamic-actions/paneldynamic-add-btn.html
+++ b/src/knockout/components/paneldynamic-actions/paneldynamic-add-btn.html
@@ -1,5 +1,5 @@
 <!-- ko if: question.koCanAddPanel -->
 <button type="button" data-bind="click: question.koAddPanelClick, css: question.koAddButtonCss, visible: question.koCanAddPanel">
-  <span data-bind="css: question.cssClasses.buttonAddText, text: question.panelAddText"></span>
+  <span data-bind="css: question.cssClasses.buttonAddText"><!-- ko template: { name: 'survey-string', data: question.locPanelAddText } --><!-- /ko --></span>
 </button>
 <!-- /ko -->
