Work for #7669 - use shared TOCModel and give access to it

--- a/packages/survey-angular-ui/src/components/progress/toc/progress.component.html
+++ b/packages/survey-angular-ui/src/components/progress/toc/progress.component.html
@@ -1,9 +1,9 @@
 <ng-template #template>
-  <div [class]="tocModel.containerCss">
-    <sv-ng-list *ngIf="!tocModel.isMobile" [model]="tocModel.listModel"></sv-ng-list>
-    <div *ngIf="tocModel.isMobile" (click)="tocModel.togglePopup()" data-bind="key2click">
-        <svg [iconName]="tocModel.icon" [size]="24" sv-ng-svg-icon></svg>
-        <sv-ng-popup [popupModel]="tocModel.popupModel"></sv-ng-popup>
+  <div [class]="model.containerCss">
+    <sv-ng-list *ngIf="!model.isMobile" [model]="model.listModel"></sv-ng-list>
+    <div *ngIf="model.isMobile" (click)="model.togglePopup()" data-bind="key2click">
+        <svg [iconName]="model.icon" [size]="24" sv-ng-svg-icon></svg>
+        <sv-ng-popup [popupModel]="model.popupModel"></sv-ng-popup>
     </div>
   </div>  
 </ng-template>
