--- a/src/knockout/components/progress/toc.html
+++ b/src/knockout/components/progress/toc.html
@@ -1,3 +1,4 @@
+<!-- ko with: tocModel -->
 <div data-bind="css: containerCss">
     <!-- ko ifnot: isMobile -->
     <sv-list params="model: listModel"></sv-list>
@@ -9,3 +10,4 @@
     </div>
     <!-- /ko -->
 </div>
+<!-- /ko -->
