--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -284,6 +284,7 @@
   background: transparent;
   border-radius: calcSize(2);
   padding: calcSize(1);
+  transition: background 250ms;
 
   svg {
     @include useEditorFontSize;
