--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -93,6 +93,8 @@
   box-sizing: border-box;
   font-weight: 600;
   margin-left: calcSize(0);
+  transition: outline 250ms;
+  outline: calcSize(0.25) solid transparent;
 
   svg {
     fill: $font-questiontitle-color;
