resolve #7679 Character Counter Overlaps the Supplied Text

--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -81,6 +81,10 @@ textarea {
   padding-inline-end: calcSize(8);
 }
 
+.sd-text__character-counter.sd-text__character-counter--big:focus-within {
+  padding-inline-end: calcSize(11);
+}
+
 .sd-remaining-character-counter {
   display: none;
   flex-direction: row;
