--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -105,7 +105,6 @@
 .sd-rating__item {
   position: relative;
   background: $question-background;
-  box-shadow: $shadow-small;
   border-radius: calcSize(12.5);
   white-space: nowrap;
   padding: calcSize(0.5) calcSize(2.5);
@@ -120,7 +119,8 @@
   color: $foreground;
   fill: $foreground;
   font-size: calcFontSize(1);
-  transition: border 250ms;
+  box-shadow: $shadow-small, inset 0 0 0 0px $background;
+  transition: border 250ms, box-shadow 250ms;
 }
 
 .sd-rating__item--fixed-size {
@@ -169,11 +169,11 @@ legend+sv-ng-rating-item+.sd-rating__item {
   border: 2px solid $primary;
   color: $primary-foreground;
   font-weight: 600;
-  box-shadow: 0px 1px 2px transparent;
+  //box-shadow: 0px 1px 2px transparent;
 }
 
 .sd-rating__item--selected:focus-within {
-  box-shadow: inset 0 0 0 2px $background;
+  box-shadow: $shadow-small-reset, inset 0 0 0 2px $background;
 }
 
 .sd-rating__item-smiley {
@@ -187,7 +187,8 @@ legend+sv-ng-rating-item+.sd-rating__item {
   border: 2px solid $border;
   color: $foreground;
   fill: $border;
-  transition: border 250ms;
+  box-shadow: $shadow-small-reset, inset 0 0 0 0px $background;
+  transition: border 250ms, box-shadow 250ms;
 
   svg {
     display: block;
@@ -217,7 +218,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 }
 
 .sd-rating__item-smiley--scale-colored {
-  transition: opacity 250ms;
+  transition: border 250ms, box-shadow 250ms, opacity 250ms;
 }
 
 .sd-rating__item-smiley--error {
@@ -256,7 +257,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 }
 
 .sd-rating__item-smiley--selected:focus-within {
-  box-shadow: inset 0 0 0 2px $background;
+  box-shadow: $shadow-small-reset, inset 0 0 0 2px $background;
 }
 
 .sd-rating__item-smiley--scale-colored:not(.sd-rating__item-smiley--selected) {
