work for the https://github.com/surveyjs/private-tasks/issues/359

--- a/src/defaultV2-theme/blocks/sd-button.scss
+++ b/src/defaultV2-theme/blocks/sd-button.scss
@@ -20,7 +20,7 @@
   outline: none;
 
   box-shadow: $shadow-small, 0 0 0 0px $primary;
-  transition: box-shadow 250ms;
+  transition: box-shadow 250ms, background 250ms;
 }
 
 .sd-btn--small {
