--- a/src/knockout/components/progress/buttons.html
+++ b/src/knockout/components/progress/buttons.html
@@ -1,14 +1,27 @@
-<div data-bind="css: progressButtonsRoot">
+<div data-bind="css: model.getRootCss(container)">
+    <!-- ko if: canShowHeader -->
+    <div data-bind="css: survey.css.progressButtonsHeader">
+        <div data-bind="css: survey.css.progressButtonsPageTitle, text: model.headerText, attr: { title: model.headerText }"></div>
+    </div>
+    <!-- /ko -->
     <div data-bind="css: survey.css.progressButtonsContainer">
         <div data-bind="css: getScrollButtonCss(true), click: clickScrollButton.bind($data, $element.nextElementSibling, true)" role="button"></div>
         <div data-bind="css: survey.css.progressButtonsListContainer">
             <ul data-bind="foreach: survey.visiblePages, css: survey.css.progressButtonsList">
-                <li data-bind="css: $parent.getListElementCss($index), click: $parent.isListElementClickable($index) ? $parent.clickListElement.bind($parent, $index) : null, attr: { 'data-page-number' : $parent.getPageNumber($data) }">
+                <li data-bind="css: $parent.model.getListElementCss($index()), click: $parent.model.isListElementClickable($index()) ? $parent.model.clickListElement : null, attr: { 'data-page-number' : $parent.model.getItemNumber($data) }">
+                    <div data-bind="css: css.progressButtonsConnector"></div>
+                    <!-- ko if: $parent.canShowItemTitles -->
                     <div data-bind="css: css.progressButtonsPageTitle, text: renderedNavigationTitle, attr: { title: renderedNavigationTitle }"></div>
                     <div data-bind="css: css.progressButtonsPageDescription, text: locNavigationDescription.koRenderedHtml(), attr: { title: locNavigationDescription.koRenderedHtml() }"></div>
+                    <!-- /ko -->
                 </li>
             </ul>
         </div>
         <div data-bind="css: getScrollButtonCss(false), click: clickScrollButton.bind($data, $element.previousElementSibling, false)" role="button"></div>
     </div>
+    <!-- ko if: canShowFooter -->
+    <div data-bind="css: survey.css.progressButtonsFooter">
+        <div data-bind="css: survey.css.progressButtonsPageTitle, text: model.footerText, attr: { title: model.footerText }"></div>
+    </div>
+    <!-- /ko -->
 </div>
