work for the https://github.com/surveyjs/private-tasks/issues/357 (transition-duration varibale)

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -93,7 +93,7 @@
   box-sizing: border-box;
   font-weight: 600;
   margin-left: calcSize(0);
-  transition: outline 250ms, background 250ms;
+  transition: outline $transition-duration, background $transition-duration;
   outline: calcSize(0.25) solid transparent;
 
   svg {
