--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -7,7 +7,7 @@
   background-color: $editor-background;
   border-radius: calcSize(12.5);
   box-shadow: $shadow-inner, 0 0 0 0px $primary;
-  transition: box-shadow 250ms;
+  transition: box-shadow $transition-duration;
 
   &.sd-boolean--allowhover:focus-within {
     box-shadow: $shadow-inner-reset, 0 0 0 2px $primary;
