--- a/src/defaultV2-theme/blocks/sd-context-btn.scss
+++ b/src/defaultV2-theme/blocks/sd-context-btn.scss
@@ -18,7 +18,7 @@
 
   use {
     fill: $foreground-light;
-    transition: fill 250ms;
+    transition: fill $transition-duration;
   }
 
   cursor: pointer;
