--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -197,7 +197,7 @@
     overflow-x: hidden;
     white-space: nowrap;
     box-shadow: inset 0px 0px 0px $primary;
-    transition: box-shadow 250ms;
+    transition: box-shadow $transition-duration;
 
     &:hover,
     &:focus-visible {
