--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -200,11 +200,7 @@
   img:hover+.sd-file__remove-file-button,
   svg:hover+.sd-file__remove-file-button,
   .sd-file__remove-file-button:hover {
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    opacity: 1;
   }
 }
 
@@ -234,7 +230,13 @@
 }
 
 .sd-file__remove-file-button {
-  display: none;
+  display: block;
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity $transition-duration;
 }
 
 .sd-file__decorator--error {
