--- a/src/defaultV2-theme/blocks/sd-checkbox.scss
+++ b/src/defaultV2-theme/blocks/sd-checkbox.scss
@@ -8,7 +8,7 @@
 
   use {
     fill: transparent;
-    //transition: fill $transition-duration;
+    transition: fill $transition-duration;
   }
 }
 
