work for the https://github.com/surveyjs/private-tasks/issues/357

--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -305,6 +305,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
   .sv-star {
     opacity: 1;
+    transition: none;
   }
 
   .sv-star-2 {
