work for the https://github.com/surveyjs/survey-library/issues/7518

--- a/packages/survey-angular-ui/src/popup.survey.component.html
+++ b/packages/survey-angular-ui/src/popup.survey.component.html
@@ -5,6 +5,10 @@
         {{popup.locTitle.renderedHtml}}
       </div>
       <div [class]="popup.cssHeaderButtonsContainer">
+        <div *ngIf="popup.allowFullScreen" [class]="popup.cssHeaderFullScreenButton" (click)="popup.toggleFullScreen()">
+          <svg [iconName]="'icon-full-screen_16x16'" [size]="16" sv-ng-svg-icon></svg>
+        </div>
+
         <div [class]="popup.cssHeaderCollapseButton" (click)="popup.changeExpandCollapse()">
             <svg *ngIf="popup.isExpanded" [iconName]="'icon-minimize_16x16'" [size]="16" sv-ng-svg-icon></svg>
             <svg *ngIf="popup.isCollapsed" [iconName]="'icon-restore_16x16'" [size]="16" sv-ng-svg-icon></svg>
